# 3D2M-planner

./: README.md
Unity_proj/Assets/: New Terrain 1.asset  New Terrain 2.asset  New Terrain 3.asset  New Terrain 4.asset  New Terrain 5.asset  New Terrain 6.asset  New Terrain.asset  TerrainData_1b19ec4a-ef87-4642-8d79-07f07aa8be92.asset  TerrainData_1b983359-d7d5-4f40-ae84-2109d973ea89.asset  TerrainData_1e77972f-07fa-4822-ba09-e131a7a145b6.asset  TerrainData_3b913801-562b-45f2-af21-b5f7564a91bc.asset  TerrainData_4b990e50-c93b-49b9-9d4d-6c82dd941294.asset  TerrainData_4f140f5d-0c63-420c-8e03-d3e2825ef093.asset  TerrainData_7c463662-1736-414b-a045-6d3085667d28.asset  TerrainData_7e15ce9a-cbca-4566-9ce0-5e5f860f3e04.asset  TerrainData_94f60809-7a46-471d-8853-88b99ef5577b.asset  TerrainData_a65d0b9c-0ba7-494d-9a62-9f7c1b2b7150.asset  TerrainData_a892e84d-25b1-4e8b-9271-22274cb43302.asset  Tree.prefab  msgbrowser_settings.asset
Unity_proj/Assets/Materials/: M_Emissive_Orange.mat  M_FresnelHologram_Red.mat  M_Metallic_GlossGray.mat  base_ground.mat  ground.physicMaterial  no_fiction.physicMaterial  trial.mat
Unity_proj/Assets/Models/: car.prefab  wheel.fbx
Unity_proj/Assets/Models/FBX/: LEG_0.fbx  body.fbx  leg_1_l.fbx  leg_1_r.fbx  leg_2.fbx  leg_3.fbx  wheel1.fbx
Unity_proj/Assets/Resources/: ROSConnectionPrefab.prefab
Unity_proj/Assets/Resources/Texture/: sky1_m.mat
Unity_proj/Assets/RosMessages/DiabloSdk/msg/: Diablo_CtrlMsg.cs  OSDK_ACCLMsg.cs  OSDK_GYROMsg.cs  OSDK_LEGMOTORSMsg.cs  OSDK_POWERMsg.cs  OSDK_QUATERNIONMsg.cs  OSDK_RCMsg.cs  OSDK_STATUSMsg.cs
Unity_proj/Assets/RosMessages/Geometry/msg/: PoseMsg.cs
Unity_proj/Assets/Scenes/: Scene1.unity  Scene2.unity
Unity_proj/Assets/Scripts/: NewLayer 1.terrainlayer  NewLayer.terrainlayer  control_subscriber.cs  flash_sub.cs  main.cs  map_generator.cs  odom_publisher.cs  traj_render.cs
Unity_proj/Assets/diablo-onboard-sdk-with-serial/: CMakeLists.txt  README.en.md  package.xml
Unity_proj/Assets/diablo-onboard-sdk-with-serial/api/inc/: OSDK_Movement.hpp  OSDK_Vehicle.hpp  OSDK_Virtual_RC.hpp  Onboard_SDK_Uart_Protocol.h
Unity_proj/Assets/diablo-onboard-sdk-with-serial/api/src/: OSDK_Log.cpp  OSDK_Movement.cpp
Unity_proj/Assets/diablo-onboard-sdk-with-serial/example/diablo_ctrl/: main.cpp
Unity_proj/Assets/diablo-onboard-sdk-with-serial/example/movement_ctrl/: main.cpp
Unity_proj/Assets/diablo-onboard-sdk-with-serial/example/robot_status/: main.cpp
Unity_proj/Assets/diablo-onboard-sdk-with-serial/example/virtual_rc/: CMakeLists.txt
Unity_proj/Assets/diablo-onboard-sdk-with-serial/msg/: OSDK_LEGMOTORS.msg  OSDK_POWER.msg
Unity_proj/Assets/diablo-onboard-sdk-with-serial/script/: teleop.py
Unity_proj/ProjectSettings/: ProjectSettings.asset  QualitySettings.asset  TimeManager.asset
Unity_proj/UserSettings/: EditorUserSettings.asset
Unity_proj/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2021.dwlt
planner/: exp1.sh  exp1_unity.sh  exp2.sh  exp2_unity.sh
planner/src/diablo-onboard-sdk-with-serial/: .gitignore  .gitmodules  README.md
planner/src/diablo-onboard-sdk-with-serial/msg/: Diablo_Ctrl.msg  OSDK_QUATERNION.msg  OSDK_RC.msg  OSDK_STATUS.msg
planner/src/fake_diablo/: CMakeLists.txt  package.xml
planner/src/fake_diablo/include/fake_diablo/: fake_model.hpp
planner/src/fake_diablo/launch/: fake_diablo.launch
planner/src/fake_diablo/param/: body.STL  leg.STL  mid.STL  wheels.STL
planner/src/fake_diablo/src/: fake_model.cpp  poscmd_2_odom.cpp
planner/src/fake_ugv/: CMakeLists.txt  package.xml
planner/src/fake_ugv/src/: poscmd_2_odom.cpp
planner/src/globalmap_gene/: CMakeLists.txt  package.xml
planner/src/globalmap_gene/launch/: globalmap_gene.launch
planner/src/globalmap_gene/src/: globalmap_gene_node.cpp
planner/src/map_manager/: CMakeLists.txt  package.xml
planner/src/map_manager/include/map_manager/: PCSmap_manager.h
planner/src/map_manager/launch/: pcsmap.launch
planner/src/map_manager/param/: default.rviz
planner/src/map_manager/src/: Gridmap.cpp  MapConvertor.cpp  PCSmap_manager.cpp  SurfelMap.cpp
planner/src/mpc/: CMakeLists.txt  package.xml
planner/src/mpc/config/: param.yaml
planner/src/mpc/include/: cubic_spline_planner.h  mpc.h
planner/src/mpc/include/mpc_utils/: minco.hpp  poly_traj_utils.hpp  root_finder.hpp  traj_anal.hpp
planner/src/mpc/launch/: test_mpc.launch
planner/src/mpc/msg/: Polynome.msg
planner/src/mpc/rviz/: default.rviz
planner/src/mpc/src/: cubic_spline_planner.cpp  mpc.cpp  mpc_node.cpp
planner/src/planner_algorithm/: CMakeLists.txt  CMakeLists_cpu.txt  package.xml
planner/src/planner_algorithm/include/planner_algorithm/: back_end_optimizer.h  back_end_optimizer_new.h  front_end_Astar.h  lbfgs.hpp  lbfgs_new.hpp  minco.hpp  minco_new.hpp
planner/src/planner_algorithm/src/: back_end_optimizer.cpp  back_end_optimizer_cuda.cu  back_end_optimizer_new.cpp  front_end_Astar.cpp
planner/src/planner_manager/: CMakeLists.txt  package.xml
planner/src/planner_manager/include/planner_manager/: planner_manager.h
planner/src/planner_manager/launch/: cmu_map.launch  pcsmap.launch  scene1.launch  scene1_unity.launch  scene2.launch  scene2_unity.launch  unity.launch
planner/src/planner_manager/msg/: DVHcontrol.msg  Polynome.msg
planner/src/planner_manager/src/: planner_manager.cpp  planner_manager_node.cpp  traj_server.cpp
planner/src/read_pcd/: CMakeLists.txt  package.xml
planner/src/read_pcd/PCDFiles/: spiral0.3_2.pcd
planner/src/read_pcd/launch/: read_exp1.launch  read_exp2.launch  read_pcd.launch
planner/src/read_pcd/src/: read_pcd.cpp
planner/src/rviz_plugin_tutorials/: CMakeLists.txt  README.md  obstacle.rviz  package.xml  plugin_description.xml
planner/src/rviz_plugin_tutorials/msg/: Obstacle.msg  ObstaclePose.msg
planner/src/rviz_plugin_tutorials/src/: Obstacle.h  ObstaclePose.h  laser_pointer_goal.cpp  laser_pointer_goal.h  laser_pointer_init.cpp  laser_pointer_init.h  obstacle_generator_tool.cpp  obstacle_generator_tool.h  plant_flag_tool.cpp  plant_flag_tool.h
(+341 files in other folders)
